--- a/csvLoadClass/csvLoadClass.csproj
+++ b/csvLoadClass/csvLoadClass.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CSVLoadClassVer2.cs" />
     <Compile Include="TextLoadClass.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
